--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -80,6 +80,15 @@ grails:
           storage:
             jwt:
               secret: 'pleaseChangeThisSecretForANewOne'
+      ldap:
+        context:
+          server: 'ldap://localhost'
+          managerDn: 'cn=admin,dc=jeantessier,dc=com'
+          managerPassword: 'admin'
+        search:
+          base: "dc=jeantessier,dc=com"
+        authorities:
+          groupSearchBase: 'ou=groups,dc=jeantessier,dc=com'
       securityConfigType: "Annotation" #"InterceptUrlMap"
       filterChain:
         chainMap: [
@@ -117,20 +126,53 @@ grails:
           #{pattern: '/fileSpreadsheetImport',               access: ['ROLE_EMPLOYEE']},
           #{pattern: '/fileSpreadsheetImport/index',         access: ['ROLE_EMPLOYEE']},
         ]
-    databasemigration:
-      updateOnStart: true
-      updateOnStartFileName: changelog.xml
-    auditLog:
-      auditDomainClassName: 'org.grails.plugins.AuditTrail'
 
+---
 ---
 hibernate:
   cache:
     queries: false
     use_second_level_cache: false
     use_query_cache: false
-  dialect: org.hibernate.dialect.Oracle12cDialect
 dataSource:
   pooled: true
   jmxExport: true
-  driverClassName: oracle.jdbc.OracleDriver
+  driverClassName: org.h2.Driver
+  username: sa
+  password: ''
+
+environments:
+  development:
+    dataSource:
+      dbCreate: create-drop
+      url: jdbc:h2:mem:devDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+      logSql: true
+  test:
+    dataSource:
+      dbCreate: update
+      url: jdbc:h2:mem:testDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+  production:
+    dataSource:
+      dbCreate: none
+      url: jdbc:h2:./prodDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+      properties:
+        jmxEnabled: true
+        initialSize: 5
+        maxActive: 50
+        minIdle: 5
+        maxIdle: 25
+        maxWait: 10000
+        maxAge: 600000
+        timeBetweenEvictionRunsMillis: 5000
+        minEvictableIdleTimeMillis: 60000
+        validationQuery: SELECT 1
+        validationQueryTimeout: 3
+        validationInterval: 15000
+        testOnBorrow: true
+        testWhileIdle: true
+        testOnReturn: false
+        jdbcInterceptors: ConnectionState
+        defaultTransactionIsolation: 2 # TRANSACTION_READ_COMMITTED
+
+
+
